[package]
name = "tokio-uring"
version = "0.5.0"
authors = ["Tokio Contributors <team@tokio.rs>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/tokio-uring/0.5.0/tokio-uring"
repository = "https://github.com/tokio-rs/tokio-uring"
homepage = "https://tokio.rs"
description = """
io-uring support for the Tokio asynchronous runtime.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["async", "fs", "io-uring"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2", features = ["net", "rt", "sync"] }
slab = "0.4.2"
libc = "0.2.80"
io-uring = "0.7"
socket2 = { version = "0.5", features = ["all"] }
bytes = { version = "1.0", optional = true }
futures-util = { version = "0.3.26", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3.2.0"
tokio-test = "0.4.2"
iai = "0.1.1"
criterion = "0.5"
# we use joinset in our tests
tokio = "1.21.2"
nix = "0.30"

[package.metadata.docs.rs]
all-features = true

[profile.bench]
debug = true

[[bench]]
name = "lai_no_op"
path = "benches/lai/no_op.rs"
harness = false

[[bench]]
name = "criterion_no_op"
path = "benches/criterion/no_op.rs"
harness = false
